--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+:root {
+  font-family: "Alice", serif;
+  line-height: 150%;
+  color: #573A37;
+
+
+}
+
 body {
   background-image: url(assents/Página\ de\ receita.jpg);
   background-size: cover;
@@ -10,4 +18,17 @@ body {
   background-color: #f0e8c2;
   border-radius: 24px;
   margin: 48px auto;
+}
+
+h1 {
+  line-height: 140% 
+  font-size: 40px;  
+}
+
+h2 {
+   font-size: 24px; 
+}
+
+h1,h2 {
+    color: #291B1A; 
 }
